ranchat/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ranchat
  labels:
    app: ranchat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ranchat
  template:
    metadata:
      labels:
        app: ranchat
    spec:
      containers:
      - name: ranchat
        image: quay.io/ferossi/ranchat:0.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
