ranchat/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ranchat
spec:
  to:
    kind: Service
    name: ranchat-service
  port:
    targetPort: 5000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
